// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Props > Initial State 1`] = `
"
<main-app><!-- #shadowroot -->
  <h1>MainApp</h1>
  <p id="main-app-state">Initial State Value<!--₥0--></p>
  <test-comp><!-- #shadowroot -->
    <div>
      <h1>TestComp</h1>
      <p id="test-comp-state">Initial State Value<!--₥0--></p>
      <p id="test-comp-state-2">0<!--₥1--></p>
      <p id="test-comp-signal">Initial Signal Value<!--₥2--></p>
      <p id="test-comp-props">Initial Color<!--₥3--> - 0<!--₥4--></p>
    </div>
  </test-comp>
</main-app>
"
`;

exports[`Props > Modify Props, State and Signal 1`] = `
"
<main-app><!-- #shadowroot -->
  <h1>MainApp</h1>
  <p id="main-app-state">Initial State Value<!--₥0--></p>
  <test-comp><!-- #shadowroot -->
    <div>
      <h1>TestComp</h1>
      <p id="test-comp-state">New state Value<!--₥0--></p>
      <p id="test-comp-state-2">10<!--₥1--></p>
      <p id="test-comp-signal">New Signal Value<!--₥2--></p>
      <p id="test-comp-props">purple<!--₥3--> - 6<!--₥4--></p>
    </div>
  </test-comp>
</main-app>
"
`;
